kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid
  labels:
    app: covid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: covid
  template:
    metadata:
      labels:
        app: covid
    spec:
      containers:
      - name: covid
        image: "localhost:32000/covid:f0bac5fa"
        ports:
        - name: http
          containerPort: 8080
