kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: covid
  labels:
    app: covid
spec:
  type: ClusterIP
  ports:
   - name: http
     port: 80
     targetPort: http
  selector:
    app: covid
